# proactive-knowledge-agent

./: .gitignore  HIGH_LEVEL_PLAN.md  README.md  pyproject.toml
config/: agents.yaml  feeds.yaml
data/: .gitkeep
docs/: IMPLEMENTATION_GUIDE.md
src/: __init__.py  cache.py  cli.py  config.py  database.py  fitness_repository.py  models.py  repositories.py
src/agents/: __init__.py  base.py  finance_agent.py  fitness_agent.py  synthesis_agent.py  tech_agent.py
src/daemon/: __init__.py  jobs.py  scheduler.py
src/ingestion/: __init__.py  embeddings.py  fitness_client.py  market_client.py  podcast_bridge.py  rss_processor.py
src/outputs/: __init__.py  alerts.py  mcp_server.py  reports.py
src/world_model/: __init__.py  correlation.py  entities.py  extraction.py  pipeline.py  relationships.py  repository.py  schema.py  temporal.py
tests/: __init__.py  test_alerts.py  test_cache.py  test_cli.py  test_config.py  test_correlation.py  test_embeddings.py  test_extraction.py  test_finance_agent.py  test_fitness_agent.py  test_fitness_client.py  test_jobs.py  test_knowledge_graph.py  test_market_client.py  test_mcp_server.py  test_podcast_bridge.py  test_reports.py  test_repositories.py  test_rss_processor.py  test_scheduler.py  test_synthesis_agent.py  test_tech_agent.py  test_temporal.py
