[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proactive-knowledge-agent"
version = "0.1.0"
description = "Ambient AI system for personal intelligence across tech, fitness, and finance"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Julien Pequegnot"}
]
keywords = ["ai", "agents", "knowledge-graph", "ambient-intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.25.0",
    "feedparser>=6.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "redis>=5.0.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]
fitness = [
    "stravalib>=1.4.0",
]
market = [
    "yfinance>=0.2.0",
]

[project.scripts]
pka = "src.cli:main"

[project.urls]
Homepage = "https://github.com/julienpequegnot/proactive-knowledge-agent"
Repository = "https://github.com/julienpequegnot/proactive-knowledge-agent"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
